--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	//
+	//thymeleaf-layout-dialect 의존성 추가
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
